--- a/Instagram/Base.lproj/Main.storyboard
+++ b/Instagram/Base.lproj/Main.storyboard
@@ -14,10 +14,26 @@
                     <view key="view" contentMode="scaleToFill" id="rja-xD-Qou">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="eyL-Du-cXF">
+                                <rect key="frame" x="0.0" y="44" width="414" height="769"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="eyL-Du-cXF" firstAttribute="top" secondItem="QKK-Wg-SPQ" secondAttribute="top" id="A5F-7q-vUb"/>
+                            <constraint firstItem="QKK-Wg-SPQ" firstAttribute="bottom" secondItem="eyL-Du-cXF" secondAttribute="bottom" id="MDh-Ct-ksB"/>
+                            <constraint firstItem="eyL-Du-cXF" firstAttribute="leading" secondItem="QKK-Wg-SPQ" secondAttribute="leading" id="b44-hX-VA0"/>
+                            <constraint firstItem="QKK-Wg-SPQ" firstAttribute="trailing" secondItem="eyL-Du-cXF" secondAttribute="trailing" id="erT-ld-ePa"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="QKK-Wg-SPQ"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="ホーム" image="home" id="5q2-Pp-SFd"/>
+                    <connections>
+                        <outlet property="tableView" destination="eyL-Du-cXF" id="XCi-O0-blk"/>
+                        <segue destination="T1h-Mq-OAC" kind="show" identifier="commentSegue" id="acS-Le-lpw"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Uea-Gp-xhM" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -79,6 +95,60 @@
             </objects>
             <point key="canvasLocation" x="126" y="869"/>
         </scene>
+        <!--Comment View Controller-->
+        <scene sceneID="B1A-Xb-psJ">
+            <objects>
+                <viewController id="T1h-Mq-OAC" customClass="CommentViewController" customModule="Instagram" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="5gP-p8-k74" customClass="Comment">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Get-As-WgB">
+                                <rect key="frame" x="342" y="78" width="62" height="30"/>
+                                <state key="normal" title="投稿する"/>
+                                <connections>
+                                    <action selector="commentButton:" destination="T1h-Mq-OAC" eventType="touchUpInside" id="fQ8-r8-Rtw"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dCY-aI-9dE">
+                                <rect key="frame" x="10" y="30" width="394" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="コメントを追加..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="iuI-3n-w8o">
+                                <rect key="frame" x="10" y="76" width="322" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <action selector="handleCommentText:" destination="T1h-Mq-OAC" eventType="editingDidEnd" id="OYe-nQ-lT3"/>
+                                </connections>
+                            </textField>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="FjL-E5-X9c" firstAttribute="trailing" secondItem="dCY-aI-9dE" secondAttribute="trailing" constant="10" id="RwS-8i-Lfr"/>
+                            <constraint firstItem="iuI-3n-w8o" firstAttribute="top" secondItem="dCY-aI-9dE" secondAttribute="bottom" constant="25.5" id="UIz-du-C6z"/>
+                            <constraint firstItem="Get-As-WgB" firstAttribute="leading" secondItem="iuI-3n-w8o" secondAttribute="trailing" constant="10" id="cIl-Jv-I53"/>
+                            <constraint firstItem="dCY-aI-9dE" firstAttribute="leading" secondItem="FjL-E5-X9c" secondAttribute="leading" constant="10" id="ftS-hc-EQC"/>
+                            <constraint firstItem="FjL-E5-X9c" firstAttribute="trailing" secondItem="Get-As-WgB" secondAttribute="trailing" constant="10" id="gqf-oi-vwl"/>
+                            <constraint firstItem="dCY-aI-9dE" firstAttribute="top" secondItem="FjL-E5-X9c" secondAttribute="top" constant="30" id="l7g-6S-Ojn"/>
+                            <constraint firstItem="Get-As-WgB" firstAttribute="centerY" secondItem="iuI-3n-w8o" secondAttribute="centerY" id="tsJ-8e-O5x"/>
+                            <constraint firstItem="iuI-3n-w8o" firstAttribute="leading" secondItem="FjL-E5-X9c" secondAttribute="leading" constant="10" id="xb4-Mk-C91"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="FjL-E5-X9c"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="hJa-lh-FPP"/>
+                    <connections>
+                        <outlet property="captionLabel" destination="dCY-aI-9dE" id="ZKo-4p-AQu"/>
+                        <outlet property="commentButton" destination="Get-As-WgB" id="zB8-No-MiC"/>
+                        <outlet property="commentView" destination="iuI-3n-w8o" id="fC6-Zh-5Du"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="i5g-pB-5kB" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-913.04347826086962" y="1637.9464285714284"/>
+        </scene>
         <!--Post View Controller-->
         <scene sceneID="BuA-si-xMU">
             <objects>
@@ -86,13 +156,63 @@
                     <view key="view" contentMode="scaleToFill" id="g4M-3h-anx">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="N3j-6J-PIg">
+                                <rect key="frame" x="57" y="204" width="300" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="300" id="58d-eb-Gbq"/>
+                                </constraints>
+                                <state key="normal" title="投稿" backgroundImage="btn"/>
+                                <connections>
+                                    <action selector="handlePostButton:" destination="q1M-b6-Hwd" eventType="touchUpInside" id="zqm-mE-ri7"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JpX-W8-xWp">
+                                <rect key="frame" x="57" y="254" width="300" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="300" id="UFu-O8-rRg"/>
+                                </constraints>
+                                <state key="normal" title="キャンセル" backgroundImage="btn"/>
+                                <connections>
+                                    <action selector="handleCancelButton:" destination="q1M-b6-Hwd" eventType="touchUpInside" id="iR3-Qr-Bgr"/>
+                                </connections>
+                            </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="lh3-gD-Pck">
+                                <rect key="frame" x="10" y="64" width="120" height="120"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="120" id="Ioj-Cn-HRJ"/>
+                                    <constraint firstAttribute="height" constant="120" id="cXN-wz-6Ge"/>
+                                </constraints>
+                            </imageView>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="キャプション" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cFE-tL-M2q">
+                                <rect key="frame" x="140" y="150" width="264" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="g5v-Ze-ugg" firstAttribute="trailing" secondItem="cFE-tL-M2q" secondAttribute="trailing" constant="10" id="3ob-kM-Bxb"/>
+                            <constraint firstItem="lh3-gD-Pck" firstAttribute="leading" secondItem="g5v-Ze-ugg" secondAttribute="leading" constant="10" id="FBm-Mc-qSs"/>
+                            <constraint firstItem="lh3-gD-Pck" firstAttribute="leading" secondItem="g5v-Ze-ugg" secondAttribute="leading" constant="10" id="NBg-yw-1gg"/>
+                            <constraint firstItem="JpX-W8-xWp" firstAttribute="top" secondItem="N3j-6J-PIg" secondAttribute="bottom" constant="10" id="O40-UJ-Y0u"/>
+                            <constraint firstItem="JpX-W8-xWp" firstAttribute="centerX" secondItem="g4M-3h-anx" secondAttribute="centerX" id="VsI-Nh-eVi"/>
+                            <constraint firstItem="N3j-6J-PIg" firstAttribute="centerX" secondItem="g4M-3h-anx" secondAttribute="centerX" id="v4S-4D-TO1"/>
+                            <constraint firstItem="cFE-tL-M2q" firstAttribute="leading" secondItem="lh3-gD-Pck" secondAttribute="trailing" constant="10" id="wMp-KB-mGs"/>
+                            <constraint firstItem="cFE-tL-M2q" firstAttribute="bottom" secondItem="lh3-gD-Pck" secondAttribute="bottom" id="xMm-j5-YUq"/>
+                            <constraint firstItem="lh3-gD-Pck" firstAttribute="top" secondItem="g5v-Ze-ugg" secondAttribute="top" constant="20" id="xOF-Ac-Dax"/>
+                            <constraint firstItem="N3j-6J-PIg" firstAttribute="top" secondItem="lh3-gD-Pck" secondAttribute="bottom" constant="20" id="zPh-7d-0St"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="g5v-Ze-ugg"/>
                     </view>
+                    <connections>
+                        <outlet property="imageView" destination="lh3-gD-Pck" id="nvk-qC-Wp5"/>
+                        <outlet property="textField" destination="cFE-tL-M2q" id="M4y-Ns-Zvf"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZQp-5H-mzI" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="129" y="1628"/>
+            <point key="canvasLocation" x="128.98550724637681" y="1627.9017857142856"/>
         </scene>
         <!--設定-->
         <scene sceneID="ZVe-Sx-gul">
